trying to get wpilib c++ library to work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,37 @@
     "edu.wpi.first.math.proto.*",
     "edu.wpi.first.math.**.proto.*",
     "edu.wpi.first.math.**.struct.*",
-  ]
+  ],
+  "files.associations": {
+    "xstring": "cpp",
+    "initializer_list": "cpp",
+    "span": "cpp",
+    "utility": "cpp",
+    "vector": "cpp",
+    "xutility": "cpp",
+    "optional": "cpp",
+    "string": "cpp",
+    "atomic": "cpp",
+    "cctype": "cpp",
+    "compare": "cpp",
+    "concepts": "cpp",
+    "cstdarg": "cpp",
+    "cstddef": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cstring": "cpp",
+    "ctime": "cpp",
+    "cwchar": "cpp",
+    "exception": "cpp",
+    "iosfwd": "cpp",
+    "limits": "cpp",
+    "memory": "cpp",
+    "new": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "typeinfo": "cpp",
+    "xmemory": "cpp",
+    "xtr1common": "cpp"
+  }
 }
